--- a/jQuery/changingCSS/index.html
+++ b/jQuery/changingCSS/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Result</title>
         <link rel='stylesheet' type='text/css' href='stylesheet.css'/>
+        <script type='text/javascript' src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script type='text/javascript' src='script.js'></script>
     </head>
     <body>
